[package]
name = "peace_cmd_rt"
description = "Runtime types for commands for the Peace framework."
documentation = "https://docs.rs/peace_cmd_rt/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
doctest = false
test = false

[dependencies]
async-trait = { workspace = true }
cfg-if = { workspace = true }
fn_graph = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
interruptible = { workspace = true }
miette = { workspace = true, optional = true }
peace_cfg = { workspace = true }
peace_cmd = { workspace = true }
peace_cmd_model = { workspace = true }
peace_flow_rt = { workspace = true }
peace_item_model = { workspace = true }
peace_progress_model = { workspace = true, optional = true }
peace_resource_rt = { workspace = true }
peace_rt_model = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tynm = { workspace = true }

[features]
default = []
error_reporting = ["dep:miette"]
output_progress = [
    "dep:peace_progress_model",
    "peace_cfg/output_progress",
    "peace_cmd_model/output_progress",
    "peace_flow_rt/output_progress",
    "peace_rt_model/output_progress",
]
