[package]
name = "peace_code_gen"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
version = "0.0.6"
edition = "2021"
description = "Code generation macros for the peace automation framework."
repository = "https://github.com/azriel91/peace"
documentation = "https://docs.rs/peace_code_gen/"
readme = "../../README.md"
categories = ["development-tools"]
keywords = ["automation"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true
doctest = true
test = false

[dependencies]
syn = { version = "1.0.107", features = ["full"] }
quote = "1.0.23"
proc-macro2 = "1.0.50"
