[package]
name = "peace_code_gen"
description = "Code generation macros for the peace automation framework."
documentation = "https://docs.rs/peace_code_gen/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
proc-macro = true
doctest = true
test = false

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
