[package]
name = "peace_core"
description = "Low level data types for the peace automation framework."
documentation = "https://docs.rs/peace_core/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
doctest = true
test = false

[dependencies]
cfg-if = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["clock", "serde"] }
indicatif = { workspace = true }
peace_fmt = { path = "../fmt", version = "0.0.10" }
peace_static_check_macros = { path = "../static_check_macros", version = "0.0.10" }
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = { version = "0.9.21", optional = true }
tokio = { workspace = true, optional = true, features = ["sync"] }

[features]
default = []
output_progress = ["dep:serde_yaml", "dep:tokio"]
