[package]
name = "peace_core"
description = "Low level data types for the peace automation framework."
documentation = "https://docs.rs/peace_core/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
doctest = true
test = false

[dependencies]
cfg-if = { workspace = true }
id_newtype = { workspace = true }
peace_fmt = { workspace = true }
peace_static_check_macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
