[package]
name = "peace_data"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
version = "0.0.10"
edition = "2021"
description = "Data model for the peace automation framework."
repository = "https://github.com/azriel91/peace"
documentation = "https://docs.rs/peace_data/"
readme = "../../README.md"
categories = ["asynchronous", "config"]
keywords = ["automation"]
license = "MIT OR Apache-2.0"

[lib]
doctest = false
test = false

[dependencies]
fn_graph = { workspace = true }
peace_core = { path = "../core", version = "0.0.10" }
peace_data_derive = { path = "../data_derive", version = "0.0.10" }
serde = { version = "1.0.159", features = ["derive"] }
