[package]
name = "peace_data"
description = "Data model for the peace automation framework."
documentation = "https://docs.rs/peace_data/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
doctest = false
test = false

[dependencies]
fn_graph = { workspace = true }
peace_core = { path = "../core", version = "0.0.10" }
peace_data_derive = { path = "../data_derive", version = "0.0.10" }
serde = { version = "1.0.159", features = ["derive"] }
