[package]
name = "peace_data"
description = "Data model for the peace automation framework."
documentation = "https://docs.rs/peace_data/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
doctest = false
test = false

[dependencies]
fn_graph = { workspace = true }
peace_core = { workspace = true }
peace_data_derive = { workspace = true }
peace_item_model = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[features]
default = []
item_state_example = []
