[package]
name = "peace_data_derive"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
version = "0.0.2"
edition = "2021"
description = "Data proc macro for for the peace automation framework."
repository = "https://github.com/azriel91/peace"
documentation = "https://docs.rs/peace_data_derive/"
readme = "../../README.md"
categories = ["asynchronous", "config"]
keywords = ["automation"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
syn = "1.0.98"
quote = "1.0.20"
proc-macro2 = "1.0.40"
