[package]
name = "peace_data_derive"
description = "Data proc macro for for the peace automation framework."
documentation = "https://docs.rs/peace_data_derive/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
