[package]
name = "peace_diff"
description = "Diff types for the peace automation framework."
documentation = "https://docs.rs/peace_diff/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
doctest = false
test = false

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
