[package]
name = "peace_diff_derive"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
version = "0.0.1"
edition = "2021"
description = "Diff derive for the peace automation framework."
repository = "https://github.com/azriel91/peace"
documentation = "https://docs.rs/peace_diff_derive/"
readme = "../../README.md"
categories = ["data-structures"]
keywords = ["automation"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
syn = { version = "1.0.96", features = [ "full", "parsing" ] }
proc-macro2 = "1.0.39"
quote = "1.0.18"
