[package]
name = "peace_flow_model"
description = "Flow data model for the peace automation framework."
documentation = "https://docs.rs/peace_flow_model/"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
cfg-if = { workspace = true }
dot_ix = { workspace = true, default-features = false }
fn_graph = { workspace = true, features = ["graph_info"] }
peace_core = { workspace = true }
peace_item_model = { workspace = true }
peace_progress_model = { workspace = true, optional = true }
peace_static_check_macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tynm = { workspace = true, features = ["info", "serde"] }

[features]
default = []
output_progress = [
    "dep:peace_progress_model",
]
