[package]
name = "peace_fmt"
description = "Presentation and formatting support for the peace automation framework."
documentation = "https://docs.rs/peace_fmt/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
doctest = true
test = false

[dependencies]
async-trait = "0.1.68"
serde = "1.0.159"

[dev-dependencies]
serde = { version = "1.0.159", features = ["derive"] }
