[package]
name = "peace_fmt"
description = "Presentation and formatting support for the peace automation framework."
documentation = "https://docs.rs/peace_fmt/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
doctest = true
test = false

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
