[package]
name = "peace_item_interaction_model"
description = "Data types for item interactions for the Peace framework."
documentation = "https://docs.rs/peace_item_interaction_model/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
doctest = false
test = false

[dependencies]
indexmap = { workspace = true, optional = true, features = ["serde"] }
peace_item_model = { workspace = true, optional = true }
peace_cmd_model = { workspace = true, optional = true }
peace_progress_model = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
url = { workspace = true, features = ["serde"] }

[features]
default = []
item_locations_and_interactions = [
    "dep:indexmap",
    "dep:peace_item_model",
    "dep:peace_progress_model",
]
output_progress = [
    "dep:peace_cmd_model",
    "dep:peace_progress_model",
    "peace_cmd_model/output_progress",
]
