[package]
name = "peace_item_spec_id_macro"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
version = "0.0.2"
edition = "2021"
description = "Macro to validate `ItemSpecId`s at compile time for the peace automation framework."
repository = "https://github.com/azriel91/peace"
documentation = "https://docs.rs/peace_item_spec_id_macro/"
readme = "../../README.md"
categories = ["data-structures"]
keywords = ["automation"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
syn = "1.0.98"
quote = "1.0.20"
