[package]
name = "peace_params"
description = "Constraints and specifications for parameters for the peace automation framework."
documentation = "https://docs.rs/peace_params/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
doctest = false
test = false

[dependencies]
downcast-rs = "1.2.0"
dyn-clone = "1.0.11"
erased-serde = "0.3.25"
miette = { workspace = true, optional = true }
peace_core = { version = "0.0.10", path = "../core" }
peace_data = { version = "0.0.10", path = "../data" }
peace_params_derive = { version = "0.0.10", path = "../params_derive" }
peace_resources = { version = "0.0.10", path = "../resources" }
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"
tynm = { workspace = true }

[features]
default = []
error_reporting = ["dep:miette"]
