[package]
name = "peace_params"
description = "Constraints and specifications for parameters for the peace automation framework."
documentation = "https://docs.rs/peace_params/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
doctest = false
test = false

[dependencies]
downcast-rs = { workspace = true }
dyn-clone = { workspace = true }
erased-serde = { workspace = true }
miette = { workspace = true, optional = true }
peace_data = { workspace = true }
peace_item_model = { workspace = true }
peace_params_derive = { workspace = true }
peace_resource_rt = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tynm = { workspace = true }

[features]
default = []
error_reporting = ["dep:miette"]
item_state_example = ["peace_data/item_state_example"]
