[package]
name = "peace_params_derive"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
version = "0.0.9"
edition = "2021"
description = "Params derive macro for for the peace automation framework."
repository = "https://github.com/azriel91/peace"
documentation = "https://docs.rs/peace_params_derive/"
readme = "../../README.md"
categories = ["asynchronous", "config"]
keywords = ["automation"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
heck = "0.4.1"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.13", features = ["extra-traits"] }
