[package]
name = "peace_params_derive"
description = "Params derive macro for for the peace automation framework."
documentation = "https://docs.rs/peace_params_derive/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
heck = "0.4.1"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.18", features = ["extra-traits"] }
