[package]
name = "peace_progress_model"
description = "Command progress data model for the peace automation framework."
documentation = "https://docs.rs/peace_progress_model/"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
doctest = true
test = false

[dependencies]
chrono = { workspace = true, default-features = false }
indicatif = { workspace = true }
peace_item_model = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
