[package]
name = "peace_resource_model"
description = "Data types for resource interactions for the Peace framework."
documentation = "https://docs.rs/peace_resource_model/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
doctest = false
test = false

[dependencies]
