[package]
name = "peace_resources"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
version = "0.0.9"
edition = "2021"
description = "Runtime resources for the peace automation framework."
repository = "https://github.com/azriel91/peace"
documentation = "https://docs.rs/peace_resources/"
readme = "../../README.md"
categories = ["configuration"]
keywords = ["automation"]
license = "MIT OR Apache-2.0"

[lib]
doctest = true
test = false

[dependencies]
peace_core = { version = "0.0.9", path = "../core" }
peace_data = { version = "0.0.9", path = "../data" }
peace_fmt = { version = "0.0.9", path = "../fmt" }
resman = { version = "0.16.1", features = ["debug"] }
serde = { version = "1.0.159", features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }
type_reg = { workspace = true }
