[package]
name = "peace_resources"
description = "Runtime resources for the peace automation framework."
documentation = "https://docs.rs/peace_resources/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
doctest = true
test = false

[dependencies]
peace_core = { version = "0.0.10", path = "../core" }
peace_data = { version = "0.0.10", path = "../data" }
peace_fmt = { version = "0.0.10", path = "../fmt" }
resman = { version = "0.16.1", features = ["debug"] }
serde = { version = "1.0.159", features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }
type_reg = { workspace = true }
