[package]
name = "peace_resources"
description = "Runtime resources for the peace automation framework."
documentation = "https://docs.rs/peace_resources/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
doctest = true
test = false

[dependencies]
peace_core = { workspace = true }
peace_data = { workspace = true }
peace_fmt = { workspace = true }
resman = { workspace = true, features = ["debug"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }
type_reg = { workspace = true }
